# checkpoint-runtime

./: .dockerignore  .gitignore  ARCHITECTURE.md  Makefile  PERFORMANCE.md  README.md  docker-compose.yml
.github/workflows/: ci.yml  integration.yml  k8s-integration.yml  release.yml
benchmarks/: run_benchmarks.py  run_load_test.sh
deploy/helm/checkpoint-runtime/: Chart.yaml  values.yaml
deploy/helm/checkpoint-runtime/templates/: etcd-statefulset.yaml  frontend-deployment.yaml  grafana-config.yaml  jaeger.yaml  minio-statefulset.yaml  otel-collector.yaml  prometheus-config.yaml  python-controlplane-deployment.yaml  rust-dataplane-deployment.yaml  serviceaccount.yaml  training-headless-service.yaml  training-job.yaml
deploy/kind/: kind-config.yaml
deploy/terraform/: main.tf  outputs.tf  variables.tf
frontend/: .env.example  .eslintrc.cjs  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  design.ts  index.css  types.ts
frontend/src/components/: ActivityFeed.tsx  ArchitectureDiagram.tsx  ContainerStatus.tsx  DemoWalkthrough.tsx  ErrorBanner.tsx  LoadingSpinner.tsx  LogStream.tsx  MetricCard.tsx  StateBadge.tsx  StorageBrowser.tsx  SystemInfo.tsx  ThemeToggle.tsx  VisitorStats.tsx  index.ts  ui.tsx
frontend/src/config/: api.ts
frontend/src/hooks/: index.ts  useEventStream.ts  usePolling.ts  useReveal.ts
frontend/src/pages/: CheckpointBrowser.tsx  DemoPage.tsx  HealthPage.tsx  HowItWorksPage.tsx  LandingPage.tsx  PerformancePage.tsx  RunDetailPage.tsx  RunsPage.tsx
observability/: otel-collector-config.yaml  prometheus.yml
observability/alerts/: alerting-rules.yml
observability/grafana/dashboards/: checkpoint-overview.json  cluster-health.json  performance-deep-dive.json
observability/grafana/provisioning/dashboards/: dashboards.yml
observability/grafana/provisioning/datasources/: datasources.yml
profiling/perf-scripts/: record_checkpoint_write.sh
proto/: checkpoint.proto  common.proto  dataset.proto
python-controlplane/: Dockerfile  generate_proto.py  pyproject.toml
python-controlplane/src/controlplane/: __init__.py  coordinator.py  heartbeat.py  models.py  recovery.py  state_machine.py  telemetry.py  worker_manager.py
python-controlplane/src/controlplane/api/: __init__.py  grpc_client.py  rest.py
python-controlplane/src/sdk/: __init__.py  client.py  types.py
python-controlplane/tests/: conftest.py  test_coordinator.py  test_heartbeat.py  test_integration.py  test_state_machine.py
rust-dataplane/: Cargo.toml  Dockerfile  build.rs
rust-dataplane/benches/: write_throughput.rs
rust-dataplane/src/: backpressure.rs  config.rs  grpc_service.rs  lib.rs  main.rs  metrics.rs  retry.rs  telemetry.rs
rust-dataplane/src/checkpoint/: gc.rs  manifest.rs  mod.rs  reader.rs  writer.rs
rust-dataplane/src/dataset/: streamer.rs
rust-dataplane/src/storage/: checksum.rs  mod.rs  s3.rs
rust-dataplane/tests/: integration_test.rs
tests/chaos/: inject-network-latency.yaml  kill-dataplane-pod.yaml  kill-worker-mid-checkpoint.yaml
tests/e2e/: conftest.py  test_full_cycle.py
tests/load/: checkpoint_load_test.js
training-harness/: Dockerfile  model.py  train.py
